[LG-64]- Upgrade Lg5 Spring version